--- a/frontend/src/framework/components/results-table/results-table.component.html
+++ b/frontend/src/framework/components/results-table/results-table.component.html
@@ -116,12 +116,11 @@
       [lazy]="true"
       [paginator]="true"
       [rows]="currentFilters['size'] || 20"
+      [first]="paginatorFirst"
       [totalRecords]="totalResults"
       [rowsPerPageOptions]="domainConfig.tableConfig.rowsPerPageOptions || [10, 20, 50]"
       [styleClass]="domainConfig.tableConfig.styleClass || ''"
       [responsiveLayout]="domainConfig.tableConfig.responsiveLayout || 'scroll'"
-      [stateStorage]="domainConfig.tableConfig.stateStorage || 'session'"
-      [stateKey]="domainConfig.tableConfig.stateKey"
       [expandedRowKeys]="expandedRows"
       (onPage)="onPageChange($event)"
       (onSort)="onSort($event)"
