--- a/frontend/src/framework/components/base-picker/base-picker.component.scss
+++ b/frontend/src/framework/components/base-picker/base-picker.component.scss
@@ -24,7 +24,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 0.5rem 1rem;
   gap: 1rem;
   background-color: var(--surface-50);
 
