--- a/frontend/src/app/features/discover/discover.component.scss
+++ b/frontend/src/app/features/discover/discover.component.scss
@@ -1,7 +1,8 @@
 .discover-container {
   padding: 1.5rem;
-  max-width: 1400px;
   margin: 0 auto;
+  margin-left: 100px;
+  margin-right: 100px;
 
   .discover-header {
     display: flex;
@@ -30,6 +31,8 @@
   .panel-wrapper {
     margin-bottom: 1rem;
     transition: transform 0.2s;
+    padding: 1rem;
+    border-radius: 4px;
 
     // CDK Drag states
     &.cdk-drag-preview {
@@ -39,6 +42,23 @@
 
     &.cdk-drag-animating {
       transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+    }
+
+    // Panel-specific background colors
+    &:nth-child(1) {
+      background-color: #e3f2fd; // Light blue
+    }
+
+    &:nth-child(2) {
+      background-color: #f3e5f5; // Light purple
+    }
+
+    &:nth-child(3) {
+      background-color: #e8f5e9; // Light green
+    }
+
+    &:nth-child(4) {
+      background-color: #fff3e0; // Light orange
     }
 
     .panel-header {
