--- a/frontend/src/app/features/discover/discover.component.html
+++ b/frontend/src/app/features/discover/discover.component.html
@@ -8,7 +8,7 @@
   <div cdkDropList (cdkDropListDropped)="onPanelDrop($event)" class="panels-container">
     <ng-container *ngFor="let panelId of panelOrder">
       <!-- Panel Wrapper -->
-      <div class="panel-wrapper" cdkDrag>
+      <div class="panel-wrapper" cdkDrag [attr.id]="'panel-' + panelId">
         <!-- Drag Handle -->
         <div class="panel-header">
           <div class="panel-title-group">
@@ -33,6 +33,7 @@
               type="button"
               icon="pi pi-external-link"
               class="p-button-sm p-button-text"
+              [attr.id]="'popout-' + panelId"
               (click)="popOutPanel(panelId, getPanelType(panelId))"
               pTooltip="Pop out to separate window"
               tooltipPosition="left">
